--- a/package.json
+++ b/package.json
@@ -1,30 +1,32 @@
 {
-  "name": "vite-lib-template",
+  "name": "mapbox-gl-echarts-layer",
   "version": "0.1.0",
-  "description": "vite lib",
+  "description": "mapbox-gl-echarts-layer",
   "files": [
-    "dist",
-    "types"
+    "dist"
   ],
-  "main": "./dist/my-lib.umd.js",
-  "module": "./dist/my-lib.es.js",
+  "main": "./dist/mapbox-gl-echarts-layer.umd.js",
+  "module": "./dist/mapbox-gl-echarts-layer.es.js",
   "exports": {
     ".": {
-      "import": "./dist/my-lib.es.js",
-      "require": "./dist/my-lib.umd.js"
+      "import": "./dist/mapbox-gl-echarts-layer.es.js",
+      "require": "./dist/mapbox-gl-echarts-layer.umd.js"
     }
   },
-  "types": "./types/my-lib.d.ts",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
-  "repository": "https://github.com/naivemap/vite-lib-template",
+  "repository": "https://github.com/naivemap/mapbox-gl-echarts-layer",
   "keywords": [],
   "author": "",
   "license": "MIT",
+  "peerDependencies": {
+    "echarts": "^5.3.0"
+  },
   "devDependencies": {
+    "@types/mapbox-gl": "^2.6.1",
     "@types/node": "^17.0.15",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
