--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "module": "esnext",
     "outDir": "./dist",
     "strict": true,
+    "moduleResolution": "node",
   },
   "include": ["src/**/*.ts"],
   "exclude": []
