--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@naivemap/mapbox-gl-echarts-layer",
-  "version": "0.0.1-alpha",
+  "version": "0.1.1",
   "description": "mapbox-gl-echarts-layer",
   "files": [
     "dist"
   ],
+  "types": "./dist/mapbox-gl-echarts-layer.d.ts",
   "main": "./dist/mapbox-gl-echarts-layer.umd.js",
   "module": "./dist/mapbox-gl-echarts-layer.es.js",
   "exports": {
@@ -15,11 +16,12 @@
   },
   "scripts": {
     "dev": "vite",
+    "lint": "eslint src --fix --ext .ts,.tsx,.vue,.js,.jsx",
+    "prettier": "prettier --write .",
     "build": "vite build"
   },
   "repository": "https://github.com/naivemap/mapbox-gl-echarts-layer",
-  "keywords": [],
-  "author": "",
+  "keywords": ["mapbox-gl", "echarts"],
   "license": "MIT",
   "peerDependencies": {
     "echarts": "^5.3.0"
