--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@naivemap/mapbox-gl-echarts-layer",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "mapbox-gl-echarts-layer",
   "files": [
     "dist"
@@ -21,9 +21,12 @@
     "build": "vite build"
   },
   "repository": "https://github.com/naivemap/mapbox-gl-echarts-layer",
-  "keywords": ["mapbox-gl", "echarts"],
+  "keywords": [
+    "mapbox-gl",
+    "echarts"
+  ],
   "license": "MIT",
-  "dependencies": {
+  "peerDependencies": {
     "echarts": "^5.3.0"
   },
   "devDependencies": {
@@ -31,6 +34,7 @@
     "@types/node": "^17.0.15",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
+    "echarts": "^5.3.0",
     "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
