--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@naivemap/mapbox-gl-ex-layers",
-  "version": "0.2.0-beta.2",
+  "version": "0.2.0",
   "description": "mapbox-gl-ex-layers",
   "files": [
     "dist",
