--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@naivemap/mapbox-gl-ex-layers",
-  "version": "0.2.0",
+  "version": "0.2.1-beta1",
   "description": "mapbox-gl-ex-layers",
   "files": [
     "dist",
@@ -44,6 +44,7 @@
     "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "mapbox-gl": "^2.7.1",
     "prettier": "^2.5.1",
     "proj4": "^2.8.0",
     "typescript": "^4.5.5",
