docs: update docs

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "dev": "vite",
     "build": "vite build",
     "eslint:comment": "使用 ESLint 检查并自动修复 src 目录下所有扩展名为 .js 和 .vue 的文件",
-    "eslint": "eslint --ext .js,.ts --ignore-path .gitignore --fix src",
+    "eslint": "eslint --ext .js,.ts --fix src",
     "prettier:comment": "自动格式化当前目录下的所有文件",
     "prettier": "prettier .  --write",
     "commit:comment": "引导设置规范化的提交信息",
