--- a/packages/mapbox-gl-image-layer/package.json
+++ b/packages/mapbox-gl-image-layer/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@naivemap/mapbox-gl-echarts-layer",
-  "version": "0.4.0-alpha.1",
-  "description": "Integrate the Lines graph and Scatter (bubble) chart of Apache ECharts.",
+  "name": "@naivemap/mapbox-gl-image-layer",
+  "version": "0.3.2-beta.0",
+  "description": "Load a static image of any projection via Arrugator and Proj4js.",
   "author": "huanglii <li.huangli@qq.com>",
   "homepage": "https://github.com/naivemap/mapbox-gl-layers#readme",
   "license": "MIT",
@@ -19,6 +19,11 @@
   "files": [
     "dist"
   ],
+  "keywords": [
+    "mapbox-gl",
+    "reprojection image",
+    "proj4"
+  ],
   "publishConfig": {
     "registry": "http://localhost:4873/"
   },
@@ -30,18 +35,22 @@
     "test": "echo \"Error: run tests from root\" && exit 1",
     "build": "npm-run-all build:*",
     "build:es": "tsc --outDir dist/es --module esnext --declaration false",
-    "build:js": "tsc"
+    "build:js": "tsc",
+    "prepublishOnly": "npm-run-all build:*"
   },
   "bugs": {
     "url": "https://github.com/naivemap/mapbox-gl-layers/issues"
   },
   "peerDependencies": {
-    "echarts": "^5.3.0"
+    "proj4": "^2.8.0"
+  },
+  "dependencies": {
+    "arrugator": "^1.0.1"
   },
   "devDependencies": {
     "@types/mapbox-gl": "^2.7.2",
     "@types/node": "^17.0.36",
-    "echarts": "^5.3.2",
+    "@types/proj4": "^2.5.2",
     "npm-run-all": "^4.1.5"
   }
 }
