chore: update package.json

--- a/packages/mapbox-gl-image-layer/package.json
+++ b/packages/mapbox-gl-image-layer/package.json
@@ -21,12 +21,9 @@
   ],
   "keywords": [
     "mapbox-gl",
-    "reprojection image",
+    "reprojection",
     "proj4"
   ],
-  "publishConfig": {
-    "registry": "http://localhost:4873/"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/naivemap/mapbox-gl-layers.git"
