--- a/packages/mapbox-gl-echarts-layer/package.json
+++ b/packages/mapbox-gl-echarts-layer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@naivemap/mapbox-gl-echarts-layer",
-  "version": "0.3.2-beta.1",
+  "version": "0.3.2-beta.2",
   "description": "Integrate the Lines graph and Scatter (bubble) chart of Apache ECharts.",
   "author": "huanglii <li.huangli@qq.com>",
   "homepage": "https://github.com/naivemap/mapbox-gl-layers#readme",
@@ -25,6 +25,9 @@
     "scatter",
     "lines"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/naivemap/mapbox-gl-layers.git"
