--- a/packages/mapbox-gl-image-layer/package.json
+++ b/packages/mapbox-gl-image-layer/package.json
@@ -45,9 +45,13 @@
     "proj4": "^2.8.0"
   },
   "dependencies": {
-    "arrugator": "^1.0.1"
+    "arrugator": "^1.0.1",
+    "compare-versions": "^6.0.0-rc.1",
+    "earcut": "^2.2.4",
+    "twgl.js": "^5.3.1"
   },
   "devDependencies": {
+    "@types/earcut": "^2.1.1",
     "@types/mapbox-gl": "^2.7.2",
     "@types/node": "^17.0.36",
     "@types/proj4": "^2.5.2",
