(mapbox-gl-grid-layer)Refactor: color (#9)

--- a/packages/mapbox-gl-grid-layer/package.json
+++ b/packages/mapbox-gl-grid-layer/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@naivemap/mapbox-gl-grid-layer",
-  "version": "0.1.0",
-  "description": "",
+  "version": "0.2.0",
+  "description": "Render colorful grid data.",
   "author": "huanglii <li.huangli@qq.com>",
   "homepage": "https://github.com/naivemap/mapbox-gl-layers#readme",
   "license": "MIT",
